Agregue un formulario que me permite agregar artistas y un link que me lleva a el

--- a/musica/templates/artista.html
+++ b/musica/templates/artista.html
@@ -1,5 +1,6 @@
 {% extends "genero.html" %} {% block title %} Lista de Artistas {% endblock %}
 {% block header %} Artistas {% endblock %} {% block content %}
+<a href="{{ url_for('artista.nuevo')}}">Agregar artista</a>
 <ul>
   {% for a in artista %}
   <li>
